# fluent-assertions

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docs.yml  test.yml
src/fluent_assertions/: __init__.py
tests/: test_assert_that.py  test_assert_that_dict.py  test_assert_that_list.py  test_assert_that_string.py  test_assert_that_tuple.py
